--- a/login.html
+++ b/login.html
@@ -36,8 +36,8 @@
 });
     analytics.identify('f4ca124298', {
   name: 'Michael Brown',
-  email: 'mbrown@example.com',
-'Time to call': "20 mins"
+  email: 'mbrown@example.com'
+ 
 });        
 }
 
