--- a/login.html
+++ b/login.html
@@ -37,8 +37,8 @@
     analytics.identify('f4ca124298', {
   name: 'Michael Brown',
   email: 'mbrown@example.com',
-'Time to call':'8 mins'
- 
+'Time to call':'8 mins',
+ 'bingo_time_to_call':24
 });        
 }
 
