--- a/login.html
+++ b/login.html
@@ -38,6 +38,7 @@
   name: 'Michael Brown',
   email: 'mbrown@example.com',
 'Time to call':'8 mins',
+'DOB':'$D_897330600',
  'bingo_time_to_call':24
 });        
 }
