--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
   email: 'mbrown@example.com',
 'Time to call':'8 mins',
 'DOB':'$D_897330600',
- 'bingo_time_to_call':24
+ 'bingo_time_to_call':'$D_897330600'
 });        
 }
 
