--- a/login.html
+++ b/login.html
@@ -38,7 +38,7 @@
   name: 'Michael Brown Test two',
   email: 'mtestbrown@example.com',
 'Time to call':'8 mins',
-DOB:'$D_897330600',
+birthday:'$D_897330600',
 'bingo_time_to_call_test_date':'$D_897330600',
  'bingo_time_to_call':'$D_897330600'
 });        
