--- a/login.html
+++ b/login.html
@@ -148,7 +148,13 @@ birthday:'$D_897330600',
  'bingo_time_to_call':'$D_897330600'
 });        
 }
-
+analytics.page({
+  path: '/horoscopes/daily-horoscope/leo/',
+  referrer: 'https://www.google.com/',
+  search: '',
+  title: 'Leo Horoscope: Daily Leo Astrology for Today Free | GaneshaSpeaks.com',
+  url: 'https://www.ganeshaspeaks.com/horoscopes/daily-horoscope/leo/'
+});
        
   
 </script>
