--- a/login.html
+++ b/login.html
@@ -148,13 +148,19 @@ birthday:'$D_897330600',
  'bingo_time_to_call':'$D_897330600'
 });        
 }
-analytics.page({
-  path: '/horoscopes/daily-horoscope/leo/',
-  referrer: 'https://www.google.com/',
-  search: '',
-  title: 'Leo Horoscope: Daily Leo Astrology for Today Free | GaneshaSpeaks.com',
-  url: 'https://www.ganeshaspeaks.com/horoscopes/daily-horoscope/leo/'
-});
+ <script type="text/javascript">
+    var clevertap = {event:[], profile:[], account:[]};
+    clevertap.account.push({"id": "R74-547-885Z"});
+    clevertap.enablePersonalization = true; // enables Personalization
+    (function () {
+           var wzrk = document.createElement('script');
+           wzrk.type = 'text/javascript';
+           wzrk.async = true;
+       	   wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
+	         var s = document.getElementsByTagName('script')[0];
+           s.parentNode.insertBefore(wzrk, s);
+       })();
+    </script>
        
   
 </script>
