--- a/login.html
+++ b/login.html
@@ -114,6 +114,19 @@
     }
     window.addEventListener('keydown', function (e) { if (e.keyIdentifier == 'U+000A' || e.keyIdentifier == 'Enter' || e.keyCode == 13) { if (e.target.nodeName == 'INPUT' && e.target.type == 'text') { e.preventDefault(); return false; } } }, true);
 </script>
+	 <script type="text/javascript">
+    var clevertap = {event:[], profile:[], account:[]};
+    clevertap.account.push({"id": "R74-547-885Z"});
+    clevertap.enablePersonalization = true; // enables Personalization
+    (function () {
+           var wzrk = document.createElement('script');
+           wzrk.type = 'text/javascript';
+           wzrk.async = true;
+       	   wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
+	         var s = document.getElementsByTagName('script')[0];
+           s.parentNode.insertBefore(wzrk, s);
+       })();
+    </script>
  <script>
   !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var t=analytics.methods[e];analytics[t]=analytics.factory(t)}analytics.load=function(e,t){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+e+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=t};analytics.SNIPPET_VERSION="4.1.0";
   analytics.load("FQAPL2ATNAFlS3dQAZrl4nAsLoTqHJSU");
@@ -139,28 +152,16 @@
   subtitle: 'The Avalanche at Tunnel Creek',
   author: 'John Branch'
 });
-    analytics.identify('f4ca12429822', {
-  name: 'Michael Brown Test two',
-  email: 'mtestbrown@example.com',
+    analytics.identify('f4ca12429822dtdttt', {
+  name: 'Michael Brown Jumbo',
+  email: 'mtestbrown344@example.com',
 'Time to call':'8 mins',
 birthday:'$D_897330600',
 'bingo_time_to_call_test_date':'$D_897330600',
  'bingo_time_to_call':'$D_897330600'
 });        
 }
- <script type="text/javascript">
-    var clevertap = {event:[], profile:[], account:[]};
-    clevertap.account.push({"id": "R74-547-885Z"});
-    clevertap.enablePersonalization = true; // enables Personalization
-    (function () {
-           var wzrk = document.createElement('script');
-           wzrk.type = 'text/javascript';
-           wzrk.async = true;
-       	   wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
-	         var s = document.getElementsByTagName('script')[0];
-           s.parentNode.insertBefore(wzrk, s);
-       })();
-    </script>
+
        
   
 </script>
