--- a/login.html
+++ b/login.html
@@ -34,13 +34,9 @@
   subtitle: 'The Avalanche at Tunnel Creek',
   author: 'John Branch'
 });
-    analytics.identify('f4ca12429822', {
-  name: 'Michael Brown Test two',
-  email: 'mtestbrown@example.com',
-'Time to call':'8 mins',
-birthday:'$D_897330600',
-'bingo_time_to_call_test_date':'$D_897330600',
- 'bingo_time_to_call':'$D_897330600'
+    analytics.identify('f4ca124298226765566767t', {
+  Name: 'Michael Brown Test two',
+  Email: 'mtestbrowhuhvucytn@example.com'
 });        
 }
 
