--- a/login.html
+++ b/login.html
@@ -58,7 +58,7 @@
     <form>
       <input type="text" placeholder="&#xf007;  username"id="username"/>
       <input type="password" placeholder="&#xf023;  password" id="pass"/>
-      <button type="button1" onclick="signin()">Login</button>
+      <button type="button1">Login</button>
     </form>
       <p class="message"></p>
     </form>
